[package]
name = "cacache-sync"
version = "10.0.2-alpha.0"
authors = ["Kade Robertson <kade@kaderobertson.dev>", "Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Synchronous, content-addressable, key-value, high-performance, on-disk cache."
license = "Apache-2.0"
repository = "https://github.com/kade-robertson/cacache-rs-sync"
homepage = "https://github.com/kade-robertson/cacache-rs-sync"
readme = "README.md"
categories = [
    "caching",
    "filesystem"
]

[dependencies]
ssri = "7.0.0"
hex = "0.4.3"
tempfile = "3.3.0"
sha-1 = "0.10.1"
sha2 = "0.10.6"
digest = "0.10.6"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
walkdir = "2.3.2"
either = "1.8.0"
thiserror = "1.0.38"
memmap2 = "0.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
